# orgChartApi

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  build.sh  commands.sh  commands.txt  config.json  main.cc  run.sh
controllers/: AuthController.cc  AuthController.h  DepartmentsController.cc  DepartmentsController.h  JobsController.cc  JobsController.h  PersonsController.cc  PersonsController.h
filters/: LoginFilter.cc  LoginFilter.h
models/: Department.cc  Department.h  Departments.cc  Departments.h  Job.cc  Job.h  Jobs.cc  Jobs.h  Person.cc  Person.h  PersonInfo.cc  PersonInfo.h  Persons.cc  Persons.h  User.cc  User.h  model.json
plugins/: Jwt.cc  Jwt.h  JwtPlugin.cc  JwtPlugin.h
scripts/: create_db.sql  seed_db.sql
test/: CMakeLists.txt  CMakeLists2.txt  test_controllers.cc  test_main.cc
utils/: JwtService.cc  JwtService.h  utils.cc  utils.h
